--- a/evaluation_notebook.ipynb
+++ b/evaluation_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,27 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4871343090093895\n",
-      "0.5752034824533624\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dailydialog_zhao_eval = json.load(open('{}/dailydialog-eval.json'.format(data_path), 'r'))\n",
     "appropriateness_scores = [np.mean(item['annotations']['appropriateness']) for item in dailydialog_zhao_eval]\n",
     "machine_scores = pd.read_csv(\"{}/dailydialog_test.txt.score\".format(eval_path), sep='\\t', header=None)\n",
     "original_scores = list(machine_scores[2])\n",
-    "print(pearsonr(appropriateness_scores, original_scores)[0])\n",
-    "print(spearmanr(appropriateness_scores, original_scores)[0])"
+    "dailydialog_pearson = pearsonr(appropriateness_scores, original_scores)[0]\n",
+    "dailydialog_spearman =spearmanr(appropriateness_scores, original_scores)[0]"
    ]
   },
   {
@@ -64,25 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5432850985541356\n",
-      "0.6148244399739622\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "persona_zhao_eval = json.load(open('{}/persona-eval.json'.format(data_path), 'r'))\n",
     "appropriateness_scores = [np.mean(item['annotations']['appropriateness']) for item in persona_zhao_eval]\n",
     "machine_scores = pd.read_csv(\"{}/persona_test.txt.score\".format(eval_path), sep='\\t', header=None)\n",
     "original_scores = list(machine_scores[2])\n",
-    "print(pearsonr(appropriateness_scores, original_scores)[0])\n",
-    "print(spearmanr(appropriateness_scores, original_scores)[0])"
+    "persona_pearson = pearsonr(appropriateness_scores, original_scores)[0]\n",
+    "persona_spearman = spearmanr(appropriateness_scores, original_scores)[0]"
    ]
   },
   {
@@ -94,25 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4363141672929449\n",
-      "0.3633373085728696\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "machine_scores = pd.read_csv(\"{}/empathetic_test.txt.score\".format(eval_path), sep='\\t', header=None)\n",
     "empathetic_grade_eval = json.load(open('{}/empathetic-eval.json'.format(data_path), 'r'))\n",
     "relevance_scores = [np.mean(item['annotations']['relevance']) for item in empathetic_grade_eval]\n",
     "original_scores = list(machine_scores[2])\n",
-    "print(pearsonr(relevance_scores, original_scores)[0])\n",
-    "print(spearmanr(relevance_scores, original_scores)[0])"
+    "empathetic_pearson = pearsonr(relevance_scores, original_scores)[0]\n",
+    "empathetic_spearman = spearmanr(relevance_scores, original_scores)[0]"
    ]
   },
   {
@@ -124,27 +97,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.46416312979963426\n",
-      "0.5254390654848455\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "humod_eval = json.load(open('{}/movie-eval.json'.format(data_path), 'r'))\n",
     "relevance_scores = [np.mean(item['annotations']['relevance']) for item in humod_eval]\n",
     "machine_scores = pd.read_csv(\"{}/movie_test.txt.score\".format(eval_path), sep='\\t', header=None)\n",
     "original_scores = list(machine_scores[2])\n",
-    "print(pearsonr(relevance_scores, original_scores)[0])\n",
-    "print(spearmanr(relevance_scores, original_scores)[0])"
+    "movie_pearson = pearsonr(relevance_scores, original_scores)[0]\n",
+    "movie_spearman = spearmanr(relevance_scores, original_scores)[0]"
    ]
   },
   {
@@ -156,25 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4726653074611099\n",
-      "0.5258115125136885\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "topical_usr_eval = json.load(open('{}/topical-eval.json'.format(data_path), 'r'))\n",
     "overall_scores = [np.mean(item['annotations']['Overall']) for item in topical_usr_eval]\n",
     "machine_scores = pd.read_csv(\"{}/topical_test.txt.score\".format(eval_path), sep='\\t', header=None)\n",
     "original_scores = list(machine_scores[2])\n",
-    "print(pearsonr(overall_scores, original_scores)[0])\n",
-    "print(spearmanr(overall_scores, original_scores)[0])"
+    "topical_pearson = pearsonr(overall_scores, original_scores)[0]\n",
+    "topical_spearman = spearmanr(overall_scores, original_scores)[0]"
    ]
   },
   {
@@ -186,26 +141,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dstc6_eval = json.load(open('{}/twitter-eval.json'.format(data_path), 'r'))\n",
+    "overall_scores = [np.mean(item['annotations']['overall']) for item in dstc6_eval]\n",
+    "machine_scores = pd.read_csv(\"{}/twitter_test.txt.score\".format(eval_path), sep='\\t', header=None)\n",
+    "original_scores = list(machine_scores[2])\n",
+    "twitter_pearson = pearsonr(overall_scores, original_scores)[0]\n",
+    "twitter_spearman = spearmanr(overall_scores, original_scores)[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Display Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.21635967516931223\n",
-      "0.23541057362628984\n"
+      "Pearson Correlation-------------------\n",
+      "dailydialog-eval: 0.4784728726938251\n",
+      "pearsona-eval: 0.5367195606372421\n",
+      "topical-eval: 0.45747352246578243\n",
+      "movie-eval: 0.47885848893428434\n",
+      "empathetic-eval: 0.44757469869600314\n",
+      "twitter-eval: 0.22713030880960522\n",
+      "average: 0.4377049087061238\n",
+      "Spearman Correlation-------------------\n",
+      "dailydialog-eval: 0.571580485869982\n",
+      "pearsona-eval: 0.6226206814690305\n",
+      "topical-eval: 0.5108527999992152\n",
+      "movie-eval: 0.5348361880117385\n",
+      "empathetic-eval: 0.3837658913492567\n",
+      "twitter-eval: 0.24708022044924793\n",
+      "average: 0.47845604452474505\n"
      ]
     }
    ],
    "source": [
-    "dstc6_eval = json.load(open('{}/twitter-eval.json'.format(data_path), 'r'))\n",
-    "overall_scores = [np.mean(item['annotations']['overall']) for item in dstc6_eval]\n",
-    "machine_scores = pd.read_csv(\"{}/twitter_test.txt.score\".format(eval_path), sep='\\t', header=None)\n",
-    "original_scores = list(machine_scores[2])\n",
-    "print(pearsonr(overall_scores, original_scores)[0])\n",
-    "print(spearmanr(overall_scores, original_scores)[0])"
+    "print(\"Pearson Correlation-------------------\")\n",
+    "print(\"dailydialog-eval: {}\".format(dailydialog_pearson))\n",
+    "print(\"pearsona-eval: {}\".format(persona_pearson))\n",
+    "print(\"topical-eval: {}\".format(topical_pearson))\n",
+    "print(\"movie-eval: {}\".format(movie_pearson))\n",
+    "print(\"empathetic-eval: {}\".format(empathetic_pearson))\n",
+    "print(\"twitter-eval: {}\".format(twitter_pearson))\n",
+    "print(\"average: {}\".format(np.mean([dailydialog_pearson, persona_pearson, topical_pearson, \n",
+    "                                    movie_pearson, empathetic_pearson, twitter_pearson])))\n",
+    "print(\"Spearman Correlation-------------------\")\n",
+    "print(\"dailydialog-eval: {}\".format(dailydialog_spearman))\n",
+    "print(\"pearsona-eval: {}\".format(persona_spearman))\n",
+    "print(\"topical-eval: {}\".format(topical_spearman))\n",
+    "print(\"movie-eval: {}\".format(movie_spearman))\n",
+    "print(\"empathetic-eval: {}\".format(empathetic_spearman))\n",
+    "print(\"twitter-eval: {}\".format(twitter_spearman))\n",
+    "print(\"average: {}\".format(np.mean([dailydialog_spearman, persona_spearman, topical_spearman, \n",
+    "                                    movie_spearman, empathetic_spearman, twitter_spearman])))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
